# fplayer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.txt  channels.csv  channels.json  test.fseq
.github/workflows/: asan.yml  cmake-slim.yml  cmake.yml  fuzz.yml  macos.yml  msan.yml  ubsan.yml  ubuntu.yml  valgrind.yml
common/fseq/: enc.c  enc.h  fd.c  fd.h  writer.c  writer.h
common/lor/: buf.c  buf.h  protowriter.c  protowriter.h
common/std/: err.c  err.h  fc.c  fc.h  fseq.c  fseq.h  mem.c  mem.h  parse.c  parse.h  string.c  string.h
common/std2/: errcode.c  errcode.h  fc.c  fc.h  sl.c  sl.h  sleep.c  string.c  string.h  time.c  time.h
dep/sl/: sl.h
docs/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  audio_8c.html  audio_8c.js  audio_8c__incl.map  audio_8c__incl.md5  audio_8c_a088c9ba211c55d9a74c2cdba5f880a61_cgraph.map  audio_8c_a088c9ba211c55d9a74c2cdba5f880a61_cgraph.md5  audio_8c_a088c9ba211c55d9a74c2cdba5f880a61_icgraph.map  audio_8c_a088c9ba211c55d9a74c2cdba5f880a61_icgraph.md5  audio_8c_a0c9f7a75cf5e965c07b70cdde5f15cfa_cgraph.md5  audio_8c_a0f835b89e652069b65ca05572e340add_cgraph.map  audio_8c_a0f835b89e652069b65ca05572e340add_icgraph.md5  audio_8c_a31ee90daccbe20571bf17f4706a8103a_cgraph.map  audio_8c_a31ee90daccbe20571bf17f4706a8103a_icgraph.md5  audio_8c_a42e1c8367745030b6c984745e79dc43e_icgraph.map  audio_8c_a42e1c8367745030b6c984745e79dc43e_icgraph.md5  audio_8c_a684cbaee8df68440661b3b06ff1b8f51_icgraph.map  audio_8c_a684cbaee8df68440661b3b06ff1b8f51_icgraph.md5  audio_8c_ab8d211abfcf3a5272bc45db36f041ea8_icgraph.map  audio_8c_ab8d211abfcf3a5272bc45db36f041ea8_icgraph.md5  audio_8h.html  audio_8h.js  audio_8h__dep__incl.map  audio_8h__dep__incl.md5  audio_8h__incl.map  audio_8h__incl.md5  audio_8h_a0f835b89e652069b65ca05572e340add_cgraph.md5  audio_8h_a0f835b89e652069b65ca05572e340add_icgraph.map  audio_8h_a31ee90daccbe20571bf17f4706a8103a_cgraph.md5  audio_8h_a31ee90daccbe20571bf17f4706a8103a_icgraph.map  audio_8h_a3b267495867abfe3e9e048c1f92f4240_cgraph.map  audio_8h_a3b267495867abfe3e9e048c1f92f4240_icgraph.map  audio_8h_a3b267495867abfe3e9e048c1f92f4240_icgraph.md5  audio_8h_source.html  cell_8c.html  cell_8c.js  cell_8c__incl.map  cell_8c__incl.md5  (+524 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enumvalues_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_8.js  (+31 more)
fuzz/: cmap.c  cmap.dict  cmap_parse_csv.c  cmap_parse_csv_line.c
gentool-src/: main.c
mftool/: main.c
mftool-src/: main.c
src/: audio.c  audio.h  buffer.c  buffer.h  bytebuf.c  bytebuf.h  cell.c  cell.h  cmap.c  cmap.h  comblock.c  comblock.h  compress.c  compress.h  crmap.c  crmap.h  encode.c  encode.h  err.c  err.h  fade.c  fade.h  lor.c  lor.h  main.c  mem.c  mem.h  minifier.c  minifier.h  net.h  netstats.c  netstats.h  parse.c  parse.h  player.c  player.h  precompute.c  precompute.h  protowriter.c  protowriter.h  (+14 more)
src/fseq/: comblock.c  comblock.h  fd.c  fd.h  seq.c  seq.h
src/pcf/: pcf.c  pcf.h
src/std/: err.c  mem.c  mem.h  mutex.c  mutex.h  parse.c  parse.h  sleep.c  sleep.h  time.c  time.h
src/transform/: cell.c  cell.h  encode.c  encode.h  fade.c  fade.h  lor.c  lor.h  minifier.c  minifier.h  netstats.c  netstats.h  precompute.c  precompute.h
test/: 1000fps_10s.fseq  25fps_10s.fseq  40fps_10s.fseq  5fps_10s.fseq  60fps_10s.fseq  cell.c  default_channels.json  dsprintf.c  fd.c  msan_ignorelist.txt  queue.c  sl.c  strtolb.c
tool/gentool/: main.c
tool/mftool/: main.c
